--- a/sass/colors.sass
+++ b/sass/colors.sass
@@ -6,3 +6,5 @@ $blue-medium: rgba(21, 133, 255, 1)
 $black-color: #0C012C
 $light-purple: #A57FE8
 $purple-color: #ECE6FC
+$green-color: rgba(16, 185, 129, 1)
+$yellow-color: rgba(239, 194, 0, 1)
