--- a/sass/main.sass
+++ b/sass/main.sass
@@ -53,7 +53,7 @@ header
 	padding: 36px 0
 	background-color: transparent
 	position: absolute
-	z-index: 10
+	z-index: 1000
 	.logo
 		display: inline-block
 		max-width: 157px
@@ -91,15 +91,45 @@ header
 		.main-title,
 		.description
 			color: $pink-color
+		.description
+			font-family: 'AvantGarde Medium', sans-serif
+			font-weight: 500
+			font-size: 30px
+			line-height: 34px
 		.text-section
 			max-width: 380px
+	&.vendors
+		background-color: #ECE6FC
+		padding-bottom: 140px
+		&::after
+			top: 0
+			right: 0
+			width: 100%
+			height: 100%
+			z-index: 10
+			background-image: url('../img/vendors-bg-banner.png')
+			background-position: center right
+		.middle-main-title
+			color: $blue-primary
+			max-width: 420px
+			margin-bottom: 28px
+		.wrapper-content
+			z-index: 20
+			margin-bottom: 40px
+		.media-section
+			&.image
+				img
+					max-width: 650px
+		.smallest-title
+			color: $blue-primary
+			margin-bottom: 20px
 	.main-title
 		margin-bottom: 20px
 	.description
-		font-family: 'AvantGarde Medium', sans-serif
-		font-weight: 500
-		font-size: 30px
-		line-height: 34px
+		//font-family: 'AvantGarde Medium', sans-serif
+		//font-weight: 500
+		//font-size: 30px
+		//line-height: 34px
 	.text-section
 		max-width: 440px
 	.buttons-wrapper
@@ -115,6 +145,9 @@ header
 			width: 100%
 			max-width: 700px
 			min-height: 390px
+		&.image
+			img
+				max-width: 480px
 	.tiles-wrapper
 		position: relative
 		z-index: 10
@@ -262,8 +295,6 @@ header
 		color: $blue-medium
 		margin-bottom: 38px
 	.grid-section
-		//width: 100%
-		//max-width: 760px
 		margin-left: -20px
 		margin-right: -20px
 		display: flex
