--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -25,12 +25,46 @@
 	.standard-p-block
 		padding: 160px 0 160px
 
+	.features
+		flex-wrap: wrap
+		display: flex
+		flex-direction: row
+		align-items: center
+		justify-content: center
+		.features-item
+			width: 100%
+			max-width: 33.33%
+			margin-bottom: 24px
+			.features-item-body
+				.text
+					font-size: 22px
+					line-height: 26px
+
+	.description
+		font-size: 19px
+
 	/**/
 	//common styles page
 	.main
 		.media-section
 			&.video
 				min-height: 350px
+
+	.vendors
+		padding-bottom: 100px
+		.wrapper-content
+			margin-bottom: 60px
+		.media-section
+			&.image
+				img
+					max-width: 480px
+		.text-section
+			max-width: 50%
+			padding-right: 30px
+		.media-section
+			max-width: 50%
+		.button-wrapper
+			margin-top: 36px
 
 	.benefits
 		.content-block
@@ -64,6 +98,17 @@
 		&.small
 			padding: 12px 16px
 
+	.features
+		.features-item
+			max-width: 38%
+			margin-bottom: 24px
+			.features-item-body
+				&.light-green
+					min-width: initial
+				.text
+					font-size: 22px
+					line-height: 26px
+
 	/**/
 	//common styles page
 	.nav-menu
@@ -76,12 +121,13 @@
 				padding-right: 20px
 			&::after
 				background-position-x: -340px
+			.description
+				font-size: 26px
+				line-height: 30px
 		.main-title
 			font-size: 52px
 			line-height: 56px
-		.description
-			font-size: 26px
-			line-height: 30px
+
 		.media-section
 			&.video
 				min-height: 280px
@@ -102,6 +148,22 @@
 					margin-left: 0
 			.tile-wrapper
 				max-width: 270px
+
+	.vendors
+		.text-section
+			padding-right: 2vw
+		.middle-main-title
+			max-width: 380px
+			margin-bottom: 26px
+		.smallest-title
+			text-align: center
+		//.description
+		//	font-size: 17px
+		//	line-height: 27px
+		.media-section
+			&.image
+				img
+					max-width: 430px
 
 	.how-it-works
 		.tiles-wrapper
@@ -137,6 +199,21 @@
 			.grid-item
 				padding: 0 16px
 
+@media only screen and (max-width : 900px)
+
+	.vendors
+		.wrapper-content
+			flex-direction: column
+		.text-section
+			max-width: 650px
+		.buttons-wrapper
+			margin-bottom: 56px
+		.media-section
+			max-width: 100%
+			&.image
+				img
+					max-width: 100%
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -148,6 +225,28 @@
 
 	.standard-p-block
 		padding: 120px 0 100px
+
+	.features
+		.features-item
+			max-width: 42%
+			margin-bottom: 24px
+			&:nth-child(3)
+				max-width: 320px
+				order: 3
+			&:nth-child(2)
+				order: 5
+			&:nth-child(4)
+				order: 1
+			&:nth-child(1)
+				order: 2
+			&:nth-child(5)
+				order: 4
+			.features-item-body
+				padding: 14px 24px
+				.text
+					font-size: 20px
+					line-height: 24px
+
 
 	//common styles page
 	header
@@ -165,7 +264,7 @@
 		background-repeat: no-repeat
 		background-size: cover
 		background-position: center
-		z-index: 100
+		z-index: 2000
 		width: 100%
 		height: 100%
 		ul
@@ -242,6 +341,8 @@
 			.description
 				font-size: 24px
 				line-height: 28px
+		.smallest-title
+			font-size: 12px
 		.tiles-wrapper
 			margin-top: 60px
 			.tile
@@ -309,6 +410,19 @@
 				&:last-of-type
 					display: none
 
+	.main.vendors
+		.wrapper-content
+			flex-direction: column
+		.text-section
+			max-width: 710px
+		.buttons-wrapper
+			margin-bottom: 56px
+		.media-section
+			max-width: 100%
+			&.image
+				img
+					max-width: 100%
+
 
 	///*Disable Animation on Mobile Devices*/
 	//.animated
@@ -346,6 +460,26 @@
 	.standard-p-block
 		padding: 100px 0 80px
 
+	.features
+		margin-right: -8px
+		margin-left: -8px
+		.features-item
+			max-width: 42%
+			padding: 0 8px
+			margin-bottom: 16px
+			&:nth-child(3)
+				max-width: 100%
+				display: flex
+				flex-direction: row
+				justify-content: center
+				.features-item-body
+					max-width: 220px
+			.features-item-body
+				padding: 12px 20px
+				.text
+					font-size: 18px
+					line-height: 22px
+
 	header
 		padding: 12px 0
 		.logo
@@ -357,11 +491,20 @@
 		&.home
 			&::after
 				background-position-x: -720px
-		.tiles-wrapper
-			.tile
-				padding: 24px
-				.tile-title
-					max-width: 148px
+			.tiles-wrapper
+				.tile
+					padding: 24px
+					.tile-title
+						max-width: 148px
+		&.vendors
+			&::after
+				background-image: url("../img/vendors-bg-banner-xs.png")
+				background-position: bottom right
+			.middle-main-title
+				max-width: 320px
+		&.common
+			.buttons-wrapper
+				margin-bottom: 40px
 		.main-title
 			margin-bottom: 16px
 		.media-section
@@ -370,6 +513,7 @@
 				height: 240px
 		.buttons-wrapper
 			margin-top: 30px
+
 	.benefits
 		.content-block
 			padding: 70px 0 70px
@@ -449,6 +593,19 @@
 	.standard-p-block
 		padding: 80px 0 60px
 
+	.features
+		.features-item
+			max-width: 48%
+			&:nth-child(3)
+				.features-item-body
+					max-width: 220px
+			.features-item-body
+				padding: 12px 18px
+				.text
+					font-size: 16px
+					line-height: 20px
+
+
 	.top_mnu
 		ul
 			justify-content: flex-end
@@ -471,6 +628,10 @@
 				font-size: 20px
 				line-height: 24px
 				max-width: 280px
+		&.vendors
+			.middle-main-title
+				max-width: 276px
+				margin-bottom: 20px
 		.main-title
 			font-size: 46px
 			line-height: 50px
@@ -485,7 +646,6 @@
 				margin-right: 0
 				&:first-of-type
 					margin-bottom: 12px
-	.main
 		.tiles-wrapper
 			margin-left: -6px
 			margin-right: -6px
