--- a/sass/main.sass
+++ b/sass/main.sass
@@ -41,12 +41,13 @@ body textarea:required:valid
 			padding-right: 0
 		a
 			display: inline-flex
-			font-family: 'Avenir Heavy', sans-serif
-			font-weight: 900
+			font-family: 'AvantGarde Bold', sans-serif
+			font-weight: 700
 			font-size: 12px
 			line-height: 18px
 			text-transform: uppercase
 			letter-spacing: 0.12em
+			color: $blue-primary
 
 header
 	width: 100%
@@ -63,8 +64,8 @@ header
 		align-items: flex-start
 	.menu-button
 		display: inline-flex
-		font-family: 'Avenir Heavy', sans-serif
-		font-weight: 900
+		font-family: 'AvantGarde Bold', sans-serif
+		font-weight: 700
 		font-size: 14px
 		line-height: 18px
 		color: $blue-primary
@@ -96,40 +97,16 @@ header
 			font-weight: 500
 			font-size: 30px
 			line-height: 34px
-		.text-section
-			max-width: 380px
-	&.vendors
-		background-color: #ECE6FC
-		padding-bottom: 140px
-		&::after
-			top: 0
-			right: 0
-			width: 100%
-			height: 100%
-			z-index: 10
-			background-image: url('../img/vendors-bg-banner.png')
-			background-position: center right
-		.middle-main-title
-			color: $blue-primary
-			max-width: 420px
-			margin-bottom: 28px
-		.wrapper-content
-			z-index: 20
-			margin-bottom: 40px
-		.media-section
-			&.image
-				img
-					max-width: 650px
-		.smallest-title
-			color: $blue-primary
-			margin-bottom: 20px
+	.text-section
+		max-width: 380px
+
+	.smallest-title
+		position: relative
+		z-index: 20
+		color: $blue-primary
+		margin-bottom: 20px
 	.main-title
 		margin-bottom: 20px
-	.description
-		//font-family: 'AvantGarde Medium', sans-serif
-		//font-weight: 500
-		//font-size: 30px
-		//line-height: 34px
 	.text-section
 		max-width: 440px
 	.buttons-wrapper
@@ -183,6 +160,29 @@ header
 		display: flex
 		flex-direction: row
 		justify-content: space-between
+
+.vendors
+	background-color: #ECE6FC
+	padding-bottom: 140px
+	&::after
+		top: 0
+		right: 0
+		width: 100%
+		height: 100%
+		z-index: 10
+		background-image: url('../img/vendors-bg-banner.png')
+		background-position: top right
+	.middle-main-title
+		color: $blue-primary
+		max-width: 420px
+		margin-bottom: 28px
+	.wrapper-content
+		z-index: 20
+		margin-bottom: 40px
+	.media-section
+		&.image
+			img
+				max-width: 650px
 
 .top_mnu
 	display: none
